--- a/index.html
+++ b/index.html
@@ -5,12 +5,132 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
     <title>Weather Dashboard Module 6</title>
 </head>
 
 <body>
+    <header class="container-fluid bg-primary text-light mb-5 p-3">
+        <div class="d-flex align-items-center">
+        <h2>Weather Dashboard!</h2>
+        </div>
+    </header>
+
+    <div class="container-fluid" style="max-width: 1400px">
+        <div class="row">
+
+            <aside class="col-lg-3 pb-3 border border-dark">
+                <form>
+                    <h3>Search 4 Your City!</h3>
+
+                    <input class="form-input weather-search" type="text" id="search-input" placeholder="Lawton" aria-labelledby="form-heading" aria-controls="today forecast"/>
+
+                    <div class="input-group-append">
+                        <button type="submit" class="btn btn-primary search-button" id="search-button" aria-label="submit search">
+                        Search
+                        </button>
+
+                    <hr class="hr weather-hr" />
+                    </div> 
+                </form>
+                <div class="list-group" id="history"></div>
+            </aside>
+            
+            <div class="col-lg-9 pb-3">
+                <section id="today" class="mt-3 border border-dark" role="region" aria-live="polite">
+
+                    <div class="col-12 col-sm-6 mb-3">
+                        <div class="card">
+                          <div class="row no-gutters">
+                            <div class="col-12 col-md-8">
+                              <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                  additional content. This content is a little bit longer.</p>
+                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+
+                </section>
+
+                <section id="forcast" class="border border-dark">
+                    <h4>5-Day Forecast!</h4><br>
+                    <div class="row">
+
+                        <div class="col-12 col-sm-6 col-md-2 mb-2">
+                            <div class="card">
+                              <h4 class="card-header">This is a card header.</h4>
+                              <div class="card-body">
+                                <p class="card-text">
+                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
+                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
+                                  voluptatem vero dolorem tempore?
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-12 col-sm-6 col-md-2 mb-2">
+                            <div class="card">
+                              <h4 class="card-header">This is a card header.</h4>
+                              <div class="card-body">
+                                <p class="card-text">
+                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
+                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
+                                  voluptatem vero dolorem tempore?
+                                </p>
+                              </div>
+                            </div>
+                          </div>                        
+                          <div class="col-12 col-sm-6 col-md-2 mb-2">
+                            <div class="card">
+                              <h4 class="card-header">This is a card header.</h4>
+                              <div class="card-body">
+                                <p class="card-text">
+                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
+                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
+                                  voluptatem vero dolorem tempore?
+                                </p>
+                              </div>
+                            </div>
+                          </div>                        
+                          <div class="col-12 col-sm-6 col-md-2 mb-2">
+                            <div class="card">
+                              <h4 class="card-header">This is a card header.</h4>
+                              <div class="card-body">
+                                <p class="card-text">
+                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
+                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
+                                  voluptatem vero dolorem tempore?
+                                </p>
+                              </div>
+                            </div>
+                          </div>                        
+                          <div class="col-12 col-sm-6 col-md-2 mb-2">
+                            <div class="card">
+                              <h4 class="card-header">This is a card header.</h4>
+                              <div class="card-body">
+                                <p class="card-text">
+                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
+                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
+                                  voluptatem vero dolorem tempore?
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </div>
+
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
 </body>
 
