--- a/index.html
+++ b/index.html
@@ -11,127 +11,72 @@
 </head>
 
 <body>
-    <header class="container-fluid bg-primary text-light mb-5 p-3">
-        <div class="d-flex align-items-center">
-        <h2>Weather Dashboard!</h2>
+  <!--Header-->
+  <header class="bg-primary text-light w-100 py-3">
+    <div class="fs-2 fw-bold" id="header-text">Weather Dashboard!</div>
+  </header>
+
+  <main class="mt-1">
+    <div class="row">
+      <!--Left side column-->
+      <div class="col-3 pb-3">
+        <form>
+          <section class="form-group">
+            <label class="fs-2 fw-bold" for="city-input">Search for a city:</label>
+            <!--Search bar-->
+            <input type="text" class="form-control form-control-lg my-2" id="city-input" placeholder="Lawton"/>
+          </section>
+          <!--Search button-->
+          <button type="submit" class="btn btn-primary form-control my-2" id="search-button">Search</button>
+        </form>
+        <!--The section where the searched cities will be stored-->
+        <div class="my-2">
+          <section class="list-group border-top border-3 pt-2 rounded-0" id="search-history"></section>
         </div>
-    </header>
-
-    <div class="container-fluid" style="max-width: 1400px">
-        <div class="row">
-
-            <aside class="col-lg-3 pb-3 border border-dark">
-                <form>
-                    <h3>Search 4 Your City!</h3>
-
-                    <input class="form-input weather-search" type="text" id="search-input" placeholder="Lawton" aria-labelledby="form-heading" aria-controls="today forecast"/>
-
-                    <div class="input-group-append">
-                        <button type="submit" class="btn btn-primary search-button" id="search-button" aria-label="submit search">
-                        Search
-                        </button>
-
-                    <hr class="hr weather-hr" />
-                    </div> 
-                </form>
-                <div class="list-group" id="history"></div>
-            </aside>
-            
-            <div class="col-lg-9 pb-3">
-                <section id="today" class="mt-3 border border-dark" role="region" aria-live="polite">
-
-                    <div class="col-12 col-sm-6 mb-3">
-                        <div class="card">
-                          <div class="row no-gutters">
-                            <div class="col-12 col-md-8">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                                  additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-
-                </section>
-
-                <section id="forcast" class="border border-dark">
-                    <h4>5-Day Forecast!</h4><br>
-                    <div class="row">
-
-                        <div class="col-12 col-sm-6 col-md-2 mb-2">
-                            <div class="card">
-                              <h4 class="card-header">This is a card header.</h4>
-                              <div class="card-body">
-                                <p class="card-text">
-                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
-                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
-                                  voluptatem vero dolorem tempore?
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="col-12 col-sm-6 col-md-2 mb-2">
-                            <div class="card">
-                              <h4 class="card-header">This is a card header.</h4>
-                              <div class="card-body">
-                                <p class="card-text">
-                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
-                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
-                                  voluptatem vero dolorem tempore?
-                                </p>
-                              </div>
-                            </div>
-                          </div>                        
-                          <div class="col-12 col-sm-6 col-md-2 mb-2">
-                            <div class="card">
-                              <h4 class="card-header">This is a card header.</h4>
-                              <div class="card-body">
-                                <p class="card-text">
-                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
-                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
-                                  voluptatem vero dolorem tempore?
-                                </p>
-                              </div>
-                            </div>
-                          </div>                        
-                          <div class="col-12 col-sm-6 col-md-2 mb-2">
-                            <div class="card">
-                              <h4 class="card-header">This is a card header.</h4>
-                              <div class="card-body">
-                                <p class="card-text">
-                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
-                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
-                                  voluptatem vero dolorem tempore?
-                                </p>
-                              </div>
-                            </div>
-                          </div>                        
-                          <div class="col-12 col-sm-6 col-md-2 mb-2">
-                            <div class="card">
-                              <h4 class="card-header">This is a card header.</h4>
-                              <div class="card-body">
-                                <p class="card-text">
-                                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Labore impedit aliquam exercitationem nostrum,
-                                  odio qui accusamus ipsum, quo accusantium maxime magnam voluptate consequuntur error sed beatae
-                                  voluptatem vero dolorem tempore?
-                                </p>
-                              </div>
-                            </div>
-                          </div>
-
-                        </div>
-                    </div>
-                </section>
+      </div>
+      <!--Right side column-->
+      <div class="col-9 py-3 pe-5" id="main-content">
+        <!--Section where the searched city's current information will appear-->
+        <section class="card rounded-0 px-1 pb-2" id="current">
+          <h2 id="city-name">Lawton (09/06/2006)</h2>
+          <h6 id="main-temp">Temp: 400F</h6>
+          <h6 id="main-wind">Wind: 4.21 MPH</h6>
+          <h6 id="main-humid">Humidity: 100%</h6>
+          <div class="current-weather"></div>
+        </section>
+        <!--Section where the searched city's next 5 days information will appear-->
+        <section class="mt-3" id="forecast">
+          <label class="fs-4 fw-bold" for="forcast-list">5-Day Forecast:</label>
+          <div class="row">
+            <!--Day 1 information-->
+            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card1"></div>
             </div>
-        </div>
-    </div>
+            <!--Day 2 information-->
+            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card2"></div>
+            </div>
+            <!--Day 3 information-->
+            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card3"></div>
+            </div>
+            <!--Day 4 information-->
+            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card4"></div>
+            </div>
+            <!--Day 5 information-->
+            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card5"></div>
+            </div>
+          </div>
+        </section>
+      </div>
 
-    
+    </div>
+  </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="./assets/js/script.js"></script>
-</body>
 
+</body>
 </html>
