--- a/index.html
+++ b/index.html
@@ -21,52 +21,81 @@
       <!--Left side column-->
       <div class="col-3 pb-3">
         <form>
-          <section class="form-group">
+          <section class="search-area" id="search-area">
             <label class="fs-2 fw-bold" for="city-input">Search for a city:</label>
-            <!--Search bar-->
-            <input type="text" class="form-control form-control-lg my-2" id="city-input" placeholder="Lawton"/>
+            <!--Search box-->
+            <input type="text" class="form-control form-control-lg my-2" id="search-box" placeholder="Lawton"/>
           </section>
           <!--Search button-->
           <button type="submit" class="btn btn-primary form-control my-2" id="search-button">Search</button>
         </form>
-        <!--The section where the searched cities will be stored-->
+        <!--The section where the search history will be stored-->
         <div class="my-2">
-          <section class="list-group border-top border-3 pt-2 rounded-0" id="search-history"></section>
+          <section class="list-group border-top border-3 pt-2 rounded-0" id="history"></section>
         </div>
       </div>
       <!--Right side column-->
       <div class="col-9 py-3 pe-5" id="main-content">
         <!--Section where the searched city's current information will appear-->
         <section class="card rounded-0 px-1 pb-2" id="current">
-          <h2 id="city-name">Lawton (09/06/2006)</h2>
-          <h6 id="main-temp">Temp: 400F</h6>
-          <h6 id="main-wind">Wind: 4.21 MPH</h6>
-          <h6 id="main-humid">Humidity: 100%</h6>
-          <div class="current-weather"></div>
+          <h3 class="city-name fw-bold"></h3>
+          <h6 class="weather-item fw-bold"></h6>
+          <h6 class="weather-item fw-bold"></h6>
+          <h6 class="weather-item fw-bold"></h6>
         </section>
         <!--Section where the searched city's next 5 days information will appear-->
         <section class="mt-3" id="forecast">
           <label class="fs-4 fw-bold" for="forcast-list">5-Day Forecast:</label>
           <div class="row">
             <!--Day 1 information-->
-            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card1"></div>
+            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card1">
+                <div class="day">04/12/2023</div>
+                <img src="" class="icon">
+                <div class="temp" id="temp">Temp: 69F</div>
+                <div class="wind" id="wind">Wind: 6.9MPH</div>
+                <div class="humidity" id="humidity">Humidity:69%</div>
+              </div>
             </div>
             <!--Day 2 information-->
-            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card2"></div>
+            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card2">
+                <div class="day">04/13/2023</div>
+                <img src="" class="icon">
+                <div class="temp" id="temp">Temp: 69F</div>
+                <div class="wind" id="wind">Wind: 6.9MPH</div>
+                <div class="humidity" id="humidity">Humidity:69%</div>
+              </div>
             </div>
             <!--Day 3 information-->
-            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card3"></div>
+            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card3">
+                <div class="day">04/14/2023</div>
+                <img src="" class="icon">
+                <div class="temp" id="temp">Temp: 69F</div>
+                <div class="wind" id="wind">Wind: 6.9MPH</div>
+                <div class="humidity" id="humidity">Humidity:69%</div>
+              </div>
             </div>
             <!--Day 4 information-->
-            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card4"></div>
+            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card4">
+                <div class="day">04/15/2023</div>
+                <img src="" class="icon">
+                <div class="temp" id="temp">Temp: 69F</div>
+                <div class="wind" id="wind">Wind: 6.9MPH</div>
+                <div class="humidity" id="humidity">Humidity:69%</div>
+              </div>
             </div>
             <!--Day 5 information-->
-            <div class="card rounded-0 me-4 bg-dark mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card5"></div>
+            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+              <div class="card-body" id="card5">
+                <div class="day">04/16/2023</div>
+                <img src="" class="icon">
+                <div class="temp" id="temp">Temp: 69F</div>
+                <div class="wind" id="wind">Wind: 6.9MPH</div>
+                <div class="humidity" id="humidity">Humidity:69%</div>
+              </div>
             </div>
           </div>
         </section>
@@ -74,8 +103,11 @@
 
     </div>
   </main>
-
+    <!--Bootstrap script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <!--Dayjs script-->
+    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js"></script>
+    <!--Local JavaScript script-->
     <script src="./assets/js/script.js"></script>
 
 </body>
