--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +8,6 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
     <title>Weather Dashboard Module 6</title>
 </head>
-
 <body>
   <!--Header-->
   <header class="bg-primary text-light w-100 py-3">
@@ -18,88 +16,100 @@
 
   <main class="mt-1">
     <div class="row">
+
       <!--Left side column-->
       <div class="col-3 pb-3">
         <form>
           <section class="search-area" id="search-area">
             <label class="fs-2 fw-bold" for="city-input">Search for a city:</label>
+
             <!--Search box-->
-            <input type="text" class="form-control form-control-lg my-2" id="search-box" placeholder="Lawton"/>
+            <input type="text" class="form-control form-control-lg my-2" id="city" placeholder="Lawton"/>
           </section>
-          <!--Search button-->
-          <button type="submit" class="btn btn-primary form-control my-2" id="search-button">Search</button>
         </form>
+
+        <!--Search button-->
+        <button type="submit" class="btn-history btn text-black btn-secondary font-weight-bold mb-2 mt-2" id="search-button">Search</button>
+
         <!--The section where the search history will be stored-->
         <div class="my-2">
-          <section class="list-group border-top border-3 pt-2 rounded-0" id="history"></section>
+          <div class="list-group border-top border-3 pt-2 rounded-0" id="search-history"></div>
         </div>
       </div>
+
       <!--Right side column-->
-      <div class="col-9 py-3 pe-5" id="main-content">
+      <div class="col-9 py-3 pe-5" id="main-container">
+
         <!--Section where the searched city's current information will appear-->
-        <section class="card rounded-0 px-1 pb-2" id="current">
-          <h3 class="city-name fw-bold"></h3>
-          <h6 class="weather-item fw-bold"></h6>
-          <h6 class="weather-item fw-bold"></h6>
-          <h6 class="weather-item fw-bold"></h6>
-        </section>
-        <!--Section where the searched city's next 5 days information will appear-->
-        <section class="mt-3" id="forecast">
-          <label class="fs-4 fw-bold" for="forcast-list">5-Day Forecast:</label>
-          <div class="row">
-            <!--Day 1 information-->
-            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card1">
-                <div class="day">04/12/2023</div>
-                <img src="" class="icon">
-                <div class="temp" id="temp">Temp: 69F</div>
-                <div class="wind" id="wind">Wind: 6.9MPH</div>
-                <div class="humidity" id="humidity">Humidity:69%</div>
-              </div>
-            </div>
-            <!--Day 2 information-->
-            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card2">
-                <div class="day">04/13/2023</div>
-                <img src="" class="icon">
-                <div class="temp" id="temp">Temp: 69F</div>
-                <div class="wind" id="wind">Wind: 6.9MPH</div>
-                <div class="humidity" id="humidity">Humidity:69%</div>
-              </div>
-            </div>
-            <!--Day 3 information-->
-            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card3">
-                <div class="day">04/14/2023</div>
-                <img src="" class="icon">
-                <div class="temp" id="temp">Temp: 69F</div>
-                <div class="wind" id="wind">Wind: 6.9MPH</div>
-                <div class="humidity" id="humidity">Humidity:69%</div>
-              </div>
-            </div>
-            <!--Day 4 information-->
-            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card4">
-                <div class="day">04/15/2023</div>
-                <img src="" class="icon">
-                <div class="temp" id="temp">Temp: 69F</div>
-                <div class="wind" id="wind">Wind: 6.9MPH</div>
-                <div class="humidity" id="humidity">Humidity:69%</div>
-              </div>
-            </div>
-            <!--Day 5 information-->
-            <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
-              <div class="card-body" id="card5">
-                <div class="day">04/16/2023</div>
-                <img src="" class="icon">
-                <div class="temp" id="temp">Temp: 69F</div>
-                <div class="wind" id="wind">Wind: 6.9MPH</div>
-                <div class="humidity" id="humidity">Humidity:69%</div>
-              </div>
+      <section class="card rounded-0 px-1 pb-2" id="mainWeather">
+        <div id="main-name"></div>
+        <div id="main-temp"></div>
+        <div id="main-wind"></div>
+        <div id="main-humidity"></div>
+      </section>
+
+      <!--Section where the searched city's next 5 days information will appear-->
+      <section class="mt-3" id="forecastWeather">
+        <label class="fs-4 fw-bold" for="forcast-list">5-Day Forecast:</label>
+        <div class="row">
+
+          <!--Day 1 information-->
+          <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+            <div class="card-body" id="card1">
+              <div class="day"></div>
+              <img src="" class="icon">
+              <div class="temp" id="temp"></div>
+              <div class="wind" id="wind"></div>
+              <div class="humidity" id="humidity"></div>
             </div>
           </div>
-        </section>
-      </div>
+
+          <!--Day 2 information-->
+          <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+            <div class="card-body" id="card2">
+              <div class="day"></div>
+              <img src="" class="icon">
+              <div class="temp" id="temp"></div>
+              <div class="wind" id="wind"></div>
+              <div class="humidity" id="humidity"></div>
+            </div>
+          </div>
+
+          <!--Day 3 information-->
+          <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+            <div class="card-body" id="card3">
+              <div class="day"></div>
+              <img src="" class="icon">
+              <div class="temp" id="temp"></div>
+              <div class="wind" id="wind"></div>
+              <div class="humidity" id="humidity"></div>
+            </div>
+          </div>
+
+          <!--Day 4 information-->
+          <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+            <div class="card-body" id="card4">
+              <div class="day"></div>
+              <img src="" class="icon">
+              <div class="temp" id="temp"></div>
+              <div class="wind" id="wind"></div>
+              <div class="humidity" id="humidity"></div>
+            </div>
+          </div>
+          
+          <!--Day 5 information-->
+          <div class="card rounded-0 me-4 bg-dark text-light mb-3 pl-3" style="width:10rem">
+            <div class="card-body" id="card5">
+              <div class="day"></div>
+              <img src="" class="icon">
+              <div class="temp" id="temp"></div>
+              <div class="wind" id="wind"></div>
+              <div class="humidity" id="humidity"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
 
     </div>
   </main>
@@ -107,8 +117,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <!--Dayjs script-->
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.7/dayjs.min.js"></script>
+    <!--jQuery script-->
+    <script
+    src="https://code.jquery.com/jquery-3.6.4.js"
+    integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
+    crossorigin="anonymous"></script>
     <!--Local JavaScript script-->
     <script src="./assets/js/script.js"></script>
-
+    
 </body>
 </html>
