search bar edits and more css touches. turning in and will continue to work on it.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </form>
 
         <!--Search button-->
-        <button type="submit" class="btn-history btn text-black btn-secondary font-weight-bold mb-2 mt-2" id="search-button">Search</button>
+        <button type="submit" class="btn-history btn form-control text-black bg-primary font-weight-bold mb-2 mt-2" id="search-button">Search</button>
 
         <!--The section where the search history will be stored-->
         <div class="my-2">
